# Copy-Splice-Detail-Canvas

./: .env.example  .gitignore  AGENTS.md  index.html  package-lock.json  package.json  start-dev.bat  vite.config.ts  vitest.config.ts  vitest.fast.config.ts  vitest.hardening.config.ts  vitest.slowTests.ts
.cursor/: mcp.json
.git - Copy/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
Splice-Detail-Canvas/: AGENTS.md
docs/: REFACTOR_PLAN.md
scripts/: generateSearchCandidateSnapshots.ts  import-diagnostics-qa.mjs  sdc-sidecar-run.mjs  sdc-verify.mjs  sdc-workspace-run.mjs  setup-sidecar.ps1
sdc-workspace/: README.md  run-deep.bat  run.bat  run.ps1
splice_detail_canvas_rule_pack/: 00_Rule_Index.md  01_SDC-CORE-001_Glossary_and_Diagram_Structure.md  04_SDC-ORDER-001_Buffer_Tube_Color_Order.md  (+14 more)
tools/sdc-sidecar/: README.md  pyproject.toml
tools/sdc-sidecar/fixtures/: evaluate-request.example.json
tools/sdc-sidecar/fixtures/golden/: Left-SP-3254.5-compare.json  README.md
tools/sdc-sidecar/sdc/: __main__.py  batch.py  cli.py  deep_search.py  fixtures.py  node_bridge.py  report.py  sweep.py
tools/sdc-sidecar/sdc/cache/: __init__.py  checkpoint.py  score_cache.py
tools/sdc-sidecar/sdc/daemon/: __init__.py  client.py  pool.py  protocol.py
tools/sdc-sidecar/sdc/engine/: candidates.py  coordinator.py  ray_pool.py  session.py  t0_mirror.py  topology.py
tools/sdc-sidecar/sdc/engine/strategies/: __init__.py
tools/sdc-sidecar/sdc/experimental/: port_checklist.md  proxy.py  search.py
tools/sdc-sidecar/sdc/server/: http_api.py
(+351 files in other folders)
