[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdc-sidecar"
version = "0.1.0"
description = "Dev-only Python sidecar for Splice Detail Canvas import/routing/rules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sdc = "sdc.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdc*"]
